option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "LocalizationProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_server_nodemanager_service_protos.proto";

service LocalizationProtocolService {
  rpc heartbeat(LocalizerStatusProto) returns (LocalizerHeartbeatResponseProto);
}
